--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
-.Topper{
+#Topper{
   background-image = "https://upload.wikimedia.org/wikipedia/commons/a/ac/Franklin_street_chapel_hill.JPG";
   width = 100%;
   hieght = 400px;
