--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
 #Topper{
-  background = url("https://upload.wikimedia.org/wikipedia/commons/a/ac/Franklin_street_chapel_hill.JPG");
-  width = 100%;
-  hieght = 400px;
+  background : url("https://upload.wikimedia.org/wikipedia/commons/a/ac/Franklin_street_chapel_hill.JPG");
+  width : 100%;
+  height : 400px;
 }
 
 
