--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@
   background : url("https://upload.wikimedia.org/wikipedia/commons/a/ac/Franklin_street_chapel_hill.JPG");
   width : 100%;
   height : 400px;
+  background-size:contain;
 }
 
 
