--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 #Topper{
-  background : url("https://upload.wikimedia.org/wikipedia/commons/a/ac/Franklin_street_chapel_hill.JPG");
+  background : url("http://farm5.static.flickr.com/4119/4900978861_181ea90c0a.jpg");
   width : 100%;
   height : 400px;
   background-size:contain;
