--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,16 @@
   width : 100%;
   height : 400px;
   background-size:contain;
+  
+  font-size:30px;
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin:auto;
+  
+}
+
+body{
+  background-color: gray;
 }
 
 
