--- a/mystyle.css
+++ b/mystyle.css
@@ -3,11 +3,19 @@
   width : 100%;
   height : 400px;
   background-size:contain;
-  font-family:Verdana;
-  font-size:30px;
-  color:white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  margin:auto;
+  position:relative;
+  margin:0;
+  p{
+    font-family:Verdana;
+    font-size:30px;
+    color:white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
   
 }
 
