--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 #Topper{
-  background : url("http://farm5.static.flickr.com/4119/4900978861_181ea90c0a.jpg");
+  background : url("http://static1.squarespace.com/static/52e67e58e4b0fb6e3cb1cc37/t/534c424fe4b09ed6294c558d/1397506641888/");
   width : 100%;
   height : 400px;
   background-size:contain;
