--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 #Topper{
-  background : url("http://static1.squarespace.com/static/52e67e58e4b0fb6e3cb1cc37/t/534c424fe4b09ed6294c558d/1397506641888/");
+  background : url("http://anastasia22p.files.wordpress.com/2013/02/img_7126.jpg");
   width : 100%;
   height : 400px;
   background-size:contain;
