--- a/mystyle.css
+++ b/mystyle.css
@@ -25,6 +25,10 @@
     background: url("images/dropdown_arrow.png") no-repeat #fff 319px 2px;
     /* dropdown_arrow.png is a 31x28 image */
 }
+
+body{
+  background: url(http://cdn2.hubspot.net/hub/299588/file-442773704-jpg/UNC_Chapel_Hill/chapelhill1.jpg);
+}
 select {
     border:0;
     background:transparent;
