--- a/mystyle.css
+++ b/mystyle.css
@@ -30,6 +30,10 @@ body{
   background: url(http://cdn2.hubspot.net/hub/299588/file-442773704-jpg/UNC_Chapel_Hill/chapelhill1.jpg);
   background-size: contain;
 }
+img{
+  -webkit-filter: blur(5px); /* Chrome, Safari, Opera */
+  filter: blur(5px);
+}
 select {
     border:0;
     background:transparent;
