--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,7 @@
 
 body{
   background: url(http://cdn2.hubspot.net/hub/299588/file-442773704-jpg/UNC_Chapel_Hill/chapelhill1.jpg);
-  background-size: contain;
+  background-size: cover;
 }
 img{
   -webkit-filter: blur(5px); /* Chrome, Safari, Opera */
