--- a/mystyle.css
+++ b/mystyle.css
@@ -47,6 +47,7 @@ select {
 
 body{
   background-color: gray;
+  background:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
 }
 
 form{
