--- a/mystyle.css
+++ b/mystyle.css
@@ -46,8 +46,7 @@ select {
 }
 
 body{
-  background-color: gray;
-  background:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
+  background-image:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
 }
 
 form{
