--- a/mystyle.css
+++ b/mystyle.css
@@ -47,7 +47,7 @@ select {
 
 body{
   background-image:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
-  background-size: cover;
+  background-size: contain;
 }
 
 form{
