--- a/mystyle.css
+++ b/mystyle.css
@@ -53,7 +53,13 @@ body{
   background-size: contain;
   background-repeat:none;
 }
-
+form{
+ position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
 
 
 
