--- a/mystyle.css
+++ b/mystyle.css
@@ -54,7 +54,7 @@ body{
   background-repeat:no-repeat;
 }
 form{
- position: absolute;
+ position: relative;
   top: 50%;
   left: 50%;
   margin-right: -50%;
