--- a/mystyle.css
+++ b/mystyle.css
@@ -56,8 +56,8 @@ body{
 form{
  position: relative;
   top: 50%;
-  left: 50%;
-  margin-right: -50%;
+  left: auto%;
+  margin-right: auto;
   transform: translate(-50%, -50%)
 }
 
