--- a/mystyle.css
+++ b/mystyle.css
@@ -55,10 +55,8 @@ body{
 }
 form{
  position: relative;
-  top: 50%;
-  left: auto%;
+  margin-left: auto;
   margin-right: auto;
-  transform: translate(-50%, -50%)
 }
 
 
