--- a/mystyle.css
+++ b/mystyle.css
@@ -52,6 +52,7 @@ body{
   background-image:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
   background-size: contain;
   background-repeat:no-repeat;
+  width:100%;
 }
 form{
  position: relative;
