--- a/mystyle.css
+++ b/mystyle.css
@@ -49,7 +49,7 @@ select {
 }
 
 body{
-  background-image:url(https://theconnieblogdotcom.files.wordpress.com/2014/10/old-well.jpg);
+  background-image:url(http://lovelolablog.com/wp-content/uploads/2015/10/Downtown-Chapel-Hill.jpg);
   background-size: contain;
   background-repeat:no-repeat;
   width:100%;
