--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@
   background : url("http://anastasia22p.files.wordpress.com/2013/02/img_7126.jpg");
   width : 100%;
   height : 400px;
-  background-size:contain;
+  background-size:cover;
   position:relative;
   margin:0px;
   
@@ -59,6 +59,6 @@ form{
   margin-left: auto;
   margin-right: auto;
 }
-h1 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 275px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
+h1 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 125px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
 
 
