--- a/mystyle.css
+++ b/mystyle.css
@@ -59,6 +59,5 @@ form{
   margin-left: auto;
   margin-right: auto;
 }
-h1 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 125px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
-
+h1 { font-size: 30px; letter-spacing: -1px; color: #DFBF84; text-transform: uppercase; text-shadow: 1px 1px 0 #000, margin: 10px 0 24px; text-align: center; line-height: 50px; }
 
