--- a/mystyle.css
+++ b/mystyle.css
@@ -59,5 +59,4 @@ form{
   margin-left: auto;
   margin-right: auto;
 }
-h1 { font-size: 30px; letter-spacing: -1px; color: #DFBF84; text-transform: uppercase; text-shadow: 1px 1px 0 #000, margin: 10px 0 24px; text-align: center; line-height: 50px; }
-
+h1{ color: #111; font-family: 'Open Sans', sans-serif; font-size: 30px; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
