--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,11 @@
     height:50px;
     
 }
-
+#menu{
+  width:100%;
+  height: 50px;
+  background-color:black;
+}
 
 #Background{
   -webkit-filter: blur(5px);
