--- a/mystyle.css
+++ b/mystyle.css
@@ -56,7 +56,8 @@ select {
     color: red;
 }
 
-img{
+#splash{
+  background:url(https://unc.spoonuniversity.com/wp-content/uploads/sites/51/2015/11/IMG_4675-1024x768.jpg);
   padding:0px;
   margin:0px;
   width:100%;
