--- a/mystyle.css
+++ b/mystyle.css
@@ -61,7 +61,8 @@ select {
   padding:0px;
   margin:0px;
   width:100%;
-  height: 500px;
+  height: 700px;
+  background-size:cover;
 }
 form{
  position: relative;
