--- a/mystyle.css
+++ b/mystyle.css
@@ -55,15 +55,34 @@ select {
     -webkit-appearance: none;
     color: red;
 }
-
-#splash{
-  background:url(https://unc.spoonuniversity.com/wp-content/uploads/sites/51/2015/11/IMG_4675-1024x768.jpg);
-  padding:0px;
-  margin:0px;
-  width:100%;
-  height: 700px;
-  background-size:cover;
+#splash:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  
+  display: block;
+  background-image: url('https://unc.spoonuniversity.com/wp-content/uploads/sites/51/2015/11/IMG_4675-1024x768.jpg');
+  width: 1200px;
+  height: 800px;
+  
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
 }
+
+#splash {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 form{
  position: relative;
   margin-left: auto;
