--- a/mystyle.css
+++ b/mystyle.css
@@ -64,8 +64,8 @@ select {
   
   display: block;
   background-image: url('https://unc.spoonuniversity.com/wp-content/uploads/sites/51/2015/11/IMG_4675-1024x768.jpg');
-  width: 1200px;
-  height: 800px;
+  width: 100%;
+  height: 700px;
   background-size:cover;
   
   -webkit-filter: blur(5px);
