--- a/mystyle.css
+++ b/mystyle.css
@@ -1,23 +1,4 @@
-#Topper{
-  background : url("http://anastasia22p.files.wordpress.com/2013/02/img_7126.jpg");
-  width : 100%;
-  height : 400px;
-  background-size:cover;
-  position:relative;
-  margin:0px;
-  
-}
-#Topper > p{
-  font-family:Verdana;
-  font-size:30px;
-  color:white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
-  }
+
 html, body{
   padding:0px;
   margin: 0px;
@@ -94,6 +75,10 @@ h1 {
   
   margin-left:auto;
   margin-right:auto;
-  
-  
+}
+
+main{
+  background-color:black;
+  width:100%;
+  height: 300px;
 }
