--- a/mystyle.css
+++ b/mystyle.css
@@ -38,7 +38,7 @@ select {
 }
 #splash:before {
   content: "";
-  position: relative;
+  position: fixed;
   left: 0;
   right: 0;
   z-index: -1;
@@ -57,7 +57,7 @@ select {
 }
 
 #splash {
-  position: relative;
+  position: fixed;
   left: 0;
   right: 0;
   z-index: 0;
@@ -81,5 +81,5 @@ h1 {
   background-color:black;
   width:100%;
   height: 300px;
-  position:relative;
+  position:fixed;
 }
