--- a/mystyle.css
+++ b/mystyle.css
@@ -44,7 +44,7 @@ select {
   z-index: -1;
   
   display: block;
-  background-image: url('https://unc.spoonuniversity.com/wp-content/uploads/sites/51/2015/11/IMG_4675-1024x768.jpg');
+  background-image: url('https://farm8.staticflickr.com/7409/26643783000_7ccc7e2384_c.jpg');
   width: 100%;
   height: 700px;
   background-size:cover;
