--- a/mystyle.css
+++ b/mystyle.css
@@ -36,33 +36,12 @@ select {
     -webkit-appearance: none;
     color: red;
 }
-#splash:before {
-  content: "";
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  
-  display: block;
-  background-image: url('https://farm8.staticflickr.com/7409/26643783000_7ccc7e2384_c.jpg');
-  width: 100%;
-  height: 700px;
-  background-size:cover;
-  
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-}
 
 #splash {
-  position: fixed;
-  left: 0;
-  right: 0;
+  position: relative;
   z-index: 0;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 form{
