--- a/mystyle.css
+++ b/mystyle.css
@@ -42,6 +42,7 @@ select {
   z-index: 0;
   margin-left: auto;
   margin-right: auto;
+  background-image:url(https://farm8.staticflickr.com/7409/26643783000_7ccc7e2384_c.jpg);
 }
 
 form{
