--- a/mystyle.css
+++ b/mystyle.css
@@ -43,6 +43,7 @@ select {
   margin-left: auto;
   margin-right: auto;
   background-image:url(https://farm8.staticflickr.com/7409/26643783000_7ccc7e2384_c.jpg);
+  background-size:cover;
 }
 
 form{
