--- a/mystyle.css
+++ b/mystyle.css
@@ -58,6 +58,7 @@ h1 {
   margin-left:auto;
   margin-right:auto;
 }
+h2{ color: #111; font-family: 'Open Sans', sans-serif; font-size: 30px; font-weight: 300; position:relative; margin-left:auto;margin-right:auto;}
 
 #main{
   background-color:black;
