--- a/mystyle.css
+++ b/mystyle.css
@@ -39,7 +39,7 @@ select {
 
 #splash {
   position: relative;
-  z-index: 0;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
   background-image:url(https://farm8.staticflickr.com/7144/26311556194_e6f088e312_c.jpg);
@@ -58,7 +58,7 @@ h1 {
   margin-left:auto;
   margin-right:auto;
 }
-h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; font-weight: 300; position:relative; margin-left:auto;margin-right:auto;}
+h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; line-height:600px; text-align:center;font-weight: 300; margin-left:auto; margin-right:auto;}
 
 #main{
   background-color:black;
