--- a/mystyle.css
+++ b/mystyle.css
@@ -59,10 +59,12 @@ h1 {
   margin-right:auto;
 }
 h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; line-height:600px; text-align:center;font-weight: 300; margin-left:auto; margin-right:auto;}
-
+h3{
+  color: black; font-family: 'Open Sans', sans-serif; font-size: 40px;font-weight: 300; margin-left:auto; margin-right:auto;
+}
 #main{
-  background-color:black;
+  background-color:white;
   width:100%;
-  height: 300px;
+  height: 400px;
   position:relative;
 }
