--- a/mystyle.css
+++ b/mystyle.css
@@ -5,11 +5,10 @@ html, body{
 }
 .dropdown {
     overflow:hidden;
-    width:500px;
-    margin-left:auto;
+    width:150px;
     background: url("images/dropdown_arrow.png") no-repeat #fff 319px 2px;
     /* dropdown_arrow.png is a 31x28 image */
-    margin-right:auto;
+    margin:15px;
     height:50px;
     
 }
@@ -32,9 +31,10 @@ select {
     background:transparent;
     height:32px;
     border:1px solid #d8d8d8;
-    width:350px;
+    width: 15px;
     -webkit-appearance: none;
-    color: red;
+    color: black;
+    font-size:25px;
 }
 
 #splash {
@@ -51,6 +51,8 @@ form{
  position: relative;
   margin-left: auto;
   margin-right: auto;
+  text-align:center;
+  display:inline-block;
 }
 h1 { 
   color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
@@ -60,11 +62,19 @@ h1 {
 }
 h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; line-height:600px; text-align:center;font-weight: 300; margin-left:auto; margin-right:auto;}
 h3{
-  color: black; font-family: 'Open Sans', sans-serif; font-size: 40px;font-weight: 300; margin-left:auto; margin-right:auto;
+  color: black; font-family: 'Open Sans', sans-serif; font-size: 35px;font-weight: 300; margin-left:auto; margin-right:auto;
+  text-align:center;
 }
 #main{
   background-color:white;
   width:100%;
   height: 400px;
   position:relative;
+}
+h4{
+  color: black; font-family: 'Open Sans', sans-serif; font-size: 20px;font-weight: 300; display:inline-block;
+  margin:15px;
+}
+#search{
+  text-align:center;
 }
