--- a/mystyle.css
+++ b/mystyle.css
@@ -60,6 +60,12 @@ h1 {
   margin-left:auto;
   margin-right:auto;
 }
+#colored { 
+  color: blue; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
+  
+  margin-left:auto;
+  margin-right:auto;
+}
 h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; line-height:600px; text-align:center;font-weight: 300; margin-left:auto; margin-right:auto;}
 h3{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 35px;font-weight: 300; margin-left:auto; margin-right:auto;
