--- a/mystyle.css
+++ b/mystyle.css
@@ -60,7 +60,7 @@ h1 {
   margin-left:auto;
   margin-right:auto;
 }
-#colored { 
+h6 { 
   color: blue; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
   
   margin-left:auto;
