--- a/mystyle.css
+++ b/mystyle.css
@@ -61,7 +61,7 @@ h1 {
   margin-right:auto;
 }
 h1>span{ 
-  color: blue; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
+  color: #99BADD; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
   
   margin-left:auto;
   margin-right:auto;
