--- a/mystyle.css
+++ b/mystyle.css
@@ -66,7 +66,7 @@ h1>span{
   margin-left:auto;
   margin-right:auto;
 }
-h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; line-height:600px; text-align:center;font-weight: 300; margin-left:auto; margin-right:auto;}
+h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; position:relative; text-align:center;font-weight: 300;}
 h3{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 35px;font-weight: 300; margin-left:auto; margin-right:auto;
   text-align:center;
