--- a/mystyle.css
+++ b/mystyle.css
@@ -60,12 +60,7 @@ h1 {
   margin-left:auto;
   margin-right:auto;
 }
-h1>span{ 
-  color: #99BADD; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: 500; line-height: 500px; text-align: center; text-transform: uppercase;
-  
-  margin-left:auto;
-  margin-right:auto;
-}
+h1>span{ color: #99BADD;}
 h2{ color: white; font-family: 'Open Sans', sans-serif; font-size: 40px; position:relative; text-align:center;font-weight: 300;}
 h3{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 35px;font-weight: 300; margin-left:auto; margin-right:auto;
