--- a/mystyle.css
+++ b/mystyle.css
@@ -76,6 +76,17 @@ h4{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 20px;font-weight: 300; display:inline-block;
   margin:15px;
 }
+
 #search{
   text-align:center;
 }
+
+td{
+  width = 150px;
+  text-align:center;
+  color:#99BADD;
+}
+
+
+
+
