--- a/mystyle.css
+++ b/mystyle.css
@@ -81,14 +81,8 @@ h4{
   text-align:center;
 }
 
-td{
-  height:50px;
-  text-align:center;
-  color:#99BADD;
-}
-table{
-  width:100%;
-  text-align:center;
+table, th, td {
+   border: 1px solid black;
 }
 
 
