--- a/mystyle.css
+++ b/mystyle.css
@@ -85,7 +85,7 @@ h4{
    border: 1px solid black;
 }
 .restaurant{
-  width = 60%;
+  width = 400px;
   height = 300px;
   text-align:center;
   margin-top:15px;
