--- a/mystyle.css
+++ b/mystyle.css
@@ -81,7 +81,7 @@ h4{
   text-align:center;
   white-space:nowrap;
   overflow:hidden;
-  border: 1px solid;
+  border: 1px solid black;
 }
 
 #queryResults {
