--- a/mystyle.css
+++ b/mystyle.css
@@ -32,7 +32,7 @@ select {
     background:transparent;
     height:32px;
     border:1px solid #d8d8d8;
-    width: 15px;
+    width: 11%;
     -webkit-appearance: none;
     color: black;
     font-size:25px;
@@ -79,6 +79,7 @@ h3{
 h4{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 20px;font-weight: 300; display:inline-block;
   margin:15px;
+  width:11%;
 }
 
 #search{
