--- a/mystyle.css
+++ b/mystyle.css
@@ -74,6 +74,7 @@ h3{
   width:100%;
   height: 200px;
   position:relative;
+  padding:5px;
 }
 h4{
   color: black; font-family: 'Open Sans', sans-serif; font-size: 20px;font-weight: 300; display:inline-block;
