--- a/mystyle.css
+++ b/mystyle.css
@@ -107,6 +107,8 @@ h4{
   text-align:center;
   margin-top:5px;
   margin-bottom:5px;
+  color: black; 
+  font-family: 'Open Sans', sans-serif; 
 }
 
 .rating{
