--- a/mystyle.css
+++ b/mystyle.css
@@ -98,7 +98,9 @@ h4{
   border-top:1px solid black;
   margin-left:auto;
   margin-right:auto;
-  font-family: 'Open Sans', sans-serif; 
+  font-family: 'Open Sans', sans-serif;
+  margin-top:0px;
+  margin-bottom:0px;
 }
 .name{
   font-size:25px;
