--- a/infoStyle.css
+++ b/infoStyle.css
@@ -2,7 +2,12 @@ img{
   border-radius:100%;
   height:300px;
   width:300px;
-  margin-left:auto;
-  margin-right:auto;
+  text-align:center;
   margin-top:100px;
+}
+
+#header{
+  height:100px;
+  width:100%;
+  background-color:black;
 }
