--- a/infoStyle.css
+++ b/infoStyle.css
@@ -1,8 +1,13 @@
+html,body{
+  padding:0px;
+  margin:0px;
+}
 img{
   border-radius:100%;
   height:300px;
   width:300px;
-  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
   margin-top:100px;
 }
 
