--- a/infoStyle.css
+++ b/infoStyle.css
@@ -6,8 +6,8 @@ img{
   border-radius:100%;
   height:300px;
   width:300px;
-  margin-left:auto;
-  margin-right:auto;
+  position:absolute;
+  left:50%;
   margin-top:100px;
 }
 
