--- a/infoStyle.css
+++ b/infoStyle.css
@@ -7,7 +7,8 @@ img{
   height:300px;
   width:300px;
   position:absolute;
-  left:50%;
+  margin-left:auto;
+  margin-right:auto;
   margin-top:100px;
 }
 
