--- a/infoStyle.css
+++ b/infoStyle.css
@@ -6,7 +6,7 @@ img{
   border-radius:100%;
   height:300px;
   width:300px;
-  position:absolute;
+  display:block;
   margin-left:auto;
   margin-right:auto;
   margin-top:100px;
