--- a/infoStyle.css
+++ b/infoStyle.css
@@ -17,3 +17,10 @@ img{
   width:100%;
   background-color:black;
 }
+
+h4{
+  color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 50px; font-weight: 500; text-align: center; text-transform: uppercase;
+  
+  margin-left:auto;
+  margin-right:auto;
+}
