--- a/infoStyle.css
+++ b/infoStyle.css
@@ -19,7 +19,7 @@ img{
 }
 
 h4{
-  color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 50px; font-weight: 500; text-align: center; text-transform: uppercase;
+  color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 50px; font-weight: bold; text-align: center; text-transform: uppercase;
   
   margin-left:auto;
   margin-right:auto;
