--- a/infoStyle.css
+++ b/infoStyle.css
@@ -20,7 +20,8 @@ img{
 
 h4{
   text-align:center;
-  
+  #ffffff; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: bold;   text-transform: uppercase;
+
 }
 
 
