--- a/infoStyle.css
+++ b/infoStyle.css
@@ -9,7 +9,7 @@ img{
   display:block;
   margin-left:auto;
   margin-right:auto;
-  margin-top:100px;
+  margin-top:75px;
 }
 
 #header{
@@ -20,7 +20,10 @@ img{
 
 h4{
   text-align:center;
-  #ffffff; font-family: 'Raleway',sans-serif; font-size: 100px; font-weight: bold;   text-transform: uppercase;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 100px;
+  font-weight: bold;
+  text-transform: uppercase;
 
 }
 
