--- a/infoStyle.css
+++ b/infoStyle.css
@@ -22,8 +22,9 @@ h4{
   text-align:center;
   #ffffff; font-family: 'Raleway',sans-serif;
   font-size: 100px;
-  font-weight: bold;
+  font-weight: 200;
   text-transform: uppercase;
+  padding-top:5px;
 
 }
 
