--- a/infoStyle.css
+++ b/infoStyle.css
@@ -26,12 +26,14 @@ h4{
   text-transform: uppercase;
   padding-top:5px;
   margin-top:0px;
+  margin-bottom:0px;
 
 }
 h1{
   text-align:center;
   font-size:15px;
   margin:5px;
+  font-weight:5;
   
 }
 
