--- a/infoStyle.css
+++ b/infoStyle.css
@@ -33,8 +33,21 @@ h1{
   text-align:center;
   font-size:15px;
   margin:5px;
-  font-weight:5;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 15px;
+  font-weight: 100;
   
+}
+
+h2{
+ text-align:center;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top:5px;
+  margin-top:0px;
+  margin-bottom:0px; 
 }
 
 
