--- a/infoStyle.css
+++ b/infoStyle.css
@@ -57,3 +57,12 @@ h3{
   margin-right:auto;
 }
 
+h6{
+  text-align:center;
+  font-size:15px;
+  margin:5px;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 15px;
+  font-weight: 100;
+  
+}
