--- a/infoStyle.css
+++ b/infoStyle.css
@@ -59,11 +59,19 @@ h3{
 }
 
 h6{
+  margin-top:30px;
   text-align:center;
   font-size:15px;
   margin:5px;
   #ffffff; font-family: 'Raleway',sans-serif;
   font-size: 15px;
   font-weight: 100;
+  
+}
+#ratingSlider{
+  display:block;
+  width:40%;
+  margin-left:auto;
+  margin-right:auto;
   
 }
