--- a/infoStyle.css
+++ b/infoStyle.css
@@ -65,11 +65,26 @@ h6{
   #ffffff; font-family: 'Raleway',sans-serif;
   font-size: 15px;
   font-weight: 100;
+  position:absolute;
   
 }
 #ratingSlider{
   display:block;
   width:40%;
+  margin-left:auto;
+  margin-right:auto;
+  position:absolute;
+  
+}
+
+#newRatingContainer{
+  width:100%;
+  height:300px;
+  color:blue;
+  
+}
+#submit{
+  position:absolute;
   margin-left:auto;
   margin-right:auto;
   
