--- a/infoStyle.css
+++ b/infoStyle.css
@@ -73,18 +73,16 @@ h6{
   width:40%;
   margin-left:auto;
   margin-right:auto;
-  position:absolute;
   
 }
 
 #newRatingContainer{
   width:100%;
   height:300px;
-  color:blue;
+  background-color:blue;
   
 }
 #submit{
-  position:absolute;
   margin-left:auto;
   margin-right:auto;
   
