--- a/infoStyle.css
+++ b/infoStyle.css
@@ -73,6 +73,7 @@ h6{
   margin-left:auto;
   margin-right:auto;
   display:inline-block;
+  text-align:center;
   
 }
 
@@ -90,4 +91,5 @@ h6{
 
 #text-input{
   display:inline-block;
+  text-align:center;
 }
