--- a/infoStyle.css
+++ b/infoStyle.css
@@ -63,8 +63,9 @@ h6{
   text-align:center;
   font-size:15px;
   #ffffff; font-family: 'Raleway',sans-serif;
-  font-size: 15px;
-  font-weight: 100;
+  font-size: 20px;
+  font-weight: 150;
+  left:30%;
   
 }
 #ratingSlider{
