--- a/infoStyle.css
+++ b/infoStyle.css
@@ -82,6 +82,7 @@ h6{
   width:100%;
   height:300px;
   background-color:#99BADD;
+  text-align:center;
   
 }
 #submit{
@@ -90,7 +91,7 @@ h6{
   
 }
 
-#text-input{
+#textInput{
   display:inline-block;
   text-align:center;
 }
