--- a/infoStyle.css
+++ b/infoStyle.css
@@ -67,7 +67,8 @@ h6{
   font-weight: 150;
 }
 h5{
-   margin-top:50px;
+   margin-top:20px;
+   margin-right:15px;
   text-align:center;
   font-size:15px;
   #ffffff; font-family: 'Raleway',sans-serif;
