--- a/infoStyle.css
+++ b/infoStyle.css
@@ -59,7 +59,7 @@ h3{
 }
 
 h6{
-  margin-top:70px;
+  margin-top:50px;
   text-align:center;
   font-size:15px;
   #ffffff; font-family: 'Raleway',sans-serif;
@@ -90,6 +90,7 @@ h5{
   height:400px;
   background-color:#99BADD;
   text-align:center;
+  padding-top:15px;
   
 }
 #submit{
