--- a/infoStyle.css
+++ b/infoStyle.css
@@ -59,12 +59,14 @@ h3{
 }
 
 h6{
-  margin-top:50px;
-  text-align:center;
-  font-size:15px;
+ text-align:center;
   #ffffff; font-family: 'Raleway',sans-serif;
-  font-size: 20px;
-  font-weight:20;
+  font-size: 30px;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top:5px;
+  margin-top:0px;
+  margin-bottom:0px;
 }
 h5{
    margin-top:0px;
