--- a/infoStyle.css
+++ b/infoStyle.css
@@ -90,7 +90,7 @@ h5{
 #newRatingContainer{
   width:100%;
   height:500px;
-  background-color:#99BADD;
+  background-image:url(https://farm8.staticflickr.com/7144/26311556194_e6f088e312_c.jpg);
   text-align:center;
   padding-top:15px;
   margin-top:30px;
