--- a/infoStyle.css
+++ b/infoStyle.css
@@ -90,7 +90,7 @@ h5{
 #newRatingContainer{
   width:100%;
   height:500px;
-  background-image:url(http://cdn2.hubspot.net/hub/299588/file-442773704-jpg/UNC_Chapel_Hill/chapelhill1.jpg);
+  background-image:url(http://proctorfree.com/wp-content/uploads/2013/10/UNC-Chapel-Hill.jpg);
   text-align:center;
   padding-top:15px;
   margin-top:30px;
