--- a/infoStyle.css
+++ b/infoStyle.css
@@ -112,10 +112,15 @@ h5{
   text-align:center;
 }
 
-.commDate{
-  color:black;
-}
-.comm{
+p{
+   text-align:center;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top:5px;
+  margin-top:0px;
+  margin-bottom:0px;
   color:black;
 }
 
