--- a/infoStyle.css
+++ b/infoStyle.css
@@ -128,4 +128,13 @@ p{
   width:100%;
   height: 200px;
   border-top: 1px solid black;
+  text-align:center;
+  #ffffff; font-family: 'Raleway',sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  text-transform: uppercase;
+  padding-top:5px;
+  margin-top:0px;
+  margin-bottom:0px;
+  color:black;
 }
